--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="col-4">
-                    <input type="text" id="textbox11" class="form-control" placeholder="คะแนนขื่อ">
+                    <input type="text" id="textbox11" class="form-control" placeholder="คะแนนชื่อ">
                 </div>
             </div>
 
